--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <h4 class="skillsTitle">CMS</h4>
                         <p>Wordpress</p>
                         <i class="fab fa-wordpress-simple"></i>
-                        <p class="my-3"><span class="dot"></span><span class="dot"></span><span class="dot-off"></span><span class="dot-off"></span><span
-                                class="dot-off"></span></p>
+                        <p class="my-3"><span class="dot"></span><span class="dot"></span><span
+                                class="dot-off"></span><span class="dot-off"></span><span class="dot-off"></span></p>
                     </div>
                 </div>
             </div>
@@ -139,12 +139,12 @@
                                     data-target="#feliciaModal">
                                     En Savoir plus
                                 </button>
-                                <div class="modal fade" id="feliciaModal" tabindex="-1" aria-labelledby="modale felicia"
+                                <div class="modal fade" id="feliciaModal" tabindex="-1" aria-labelledby="feliciaModal"
                                     aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header text-center">
-                                                <h5 class="modal-title" id="exampleModalLabel">FELICIA</h5>
+                                                <h5 class="modal-title" id="exampleModalLabelled">FELICIA</h5>
                                                 <button type="button" class="close" data-dismiss="modal"
                                                     aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
@@ -172,9 +172,9 @@
                                                     conséquence. <br>
                                                     Pour voir à quoi ressemble la belle Felicia cliquez sur le bouton
                                                     suivant
-                                                    <a href="http://arnaudblk.com/felicia/" target="_blank"><button
-                                                            type="button" class="btn btn-primary">Lien vers
-                                                            felicia</button></a>
+                                                    <a href="http://arnaudblk.com/felicia/" target="_blank"
+                                                        class="btn btn-primary">Lien vers
+                                                        felicia</a>
                                                 </p>
                                             </div>
                                             <div class="modal-footer">
@@ -198,12 +198,12 @@
                                     data-target="#harpyeModal">
                                     En Savoir plus
                                 </button>
-                                <div class="modal fade" id="harpyeModal" tabindex="-1" aria-labelledby="modale harpye"
+                                <div class="modal fade" id="harpyeModal" tabindex="-1" aria-labelledby="harpyeModal"
                                     aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header text-center">
-                                                <h5 class="modal-title" id="exampleModalLabel">Harpye</h5>
+                                                <h5 class="modal-title" id="exampleModalLabelle">Harpye</h5>
                                                 <button type="button" class="close" data-dismiss="modal"
                                                     aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
@@ -221,10 +221,9 @@
                                                     normes RGPD. <br>
                                                     Pour visiter la page Facebook du luthier, cliquez sur le lien du
                                                     bouton
-                                                    <a href="https://www.facebook.com/harpye.lutherie/"
-                                                        target="_blank"><button type="button"
-                                                            class="btn btn-primary">Lien vers la page
-                                                            Facebook</button></a>
+                                                    <a href="https://www.facebook.com/harpye.lutherie/" target="_blank"
+                                                        class="btn btn-primary">Lien vers la page
+                                                        Facebook</a>
                                                 </p>
                                             </div>
                                             <div class="modal-footer">
@@ -248,12 +247,12 @@
                                     data-target="#calendarModal">
                                     En Savoir plus
                                 </button>
-                                <div class="modal fade" id="calendarModal" tabindex="-1"
-                                    aria-labelledby="modale calendrier" aria-hidden="true">
+                                <div class="modal fade" id="calendarModal" tabindex="-1" aria-labelledby="calendarModal"
+                                    aria-hidden="true">
                                     <div class="modal-dialog">
                                         <div class="modal-content">
                                             <div class="modal-header text-center">
-                                                <h5 class="modal-title" id="exampleModalLabel">Calendrier</h5>
+                                                <h5 class="modal-title" id="exampleModalLabell">Calendrier</h5>
                                                 <button type="button" class="close" data-dismiss="modal"
                                                     aria-label="Close">
                                                     <span aria-hidden="true">&times;</span>
@@ -263,10 +262,9 @@
                                                 <p class="calendarTextModal">Création d'un calendrier intéractif. <br>
                                                     On choisit un mois et une année et s'affiche le calendrier. <br>
                                                     Projet entièrement réalisé avec HTML, CSS et PHP.
-                                                    <a href="https://github.com/MaBlanck/calendar"
-                                                        target="_blank"><button type="button"
-                                                            class="btn btn-primary">Lien vers le gitHub du
-                                                            Calendrier</button></a>
+                                                    <a href="https://github.com/MaBlanck/calendar" target="_blank"
+                                                        class="btn btn-primary">Lien vers le gitHub du
+                                                        Calendrier</a>
                                                 </p>
                                             </div>
                                             <div class="modal-footer">
@@ -359,6 +357,7 @@
                             Javascript, php, MySql et les pionnier HTML et CSS sont mes meilleurs potes
                             aujourd'hui. <br>
                             Mais je suis pas contre l'ouverture de ce cercle de copains.
+                        </p>
                         <blockquote>
                             "Ne t'occupe pas d'être moderne. C'est l'unique chose que malheureusement, quoi que tu
                             fasses, tu ne pourras pas éviter
@@ -366,7 +365,6 @@
                             <cite>Les Cocus du vieil art moderne (1956)</cite>
                             <footer>Salavdor Dali</footer>
                         </blockquote>
-                        </p>
                     </div>
                     <div class="col-12 col-sm-12 col-md-6 col-lg-4 h-100">
                         <div class="col-12 h-100">
@@ -374,14 +372,15 @@
                             <p class="paragraph rounded p-3">Parmis toutes mes expériences professionnelles,
                                 j'ai toujours été ammené à gérer et manager des personnes.
                                 <br>
-                                J'agis pour le groupe, mais je peux, dans le même temps, mettre en pratique ma vision de celui-ci.
+                                J'agis pour le groupe, mais je peux, dans le même temps, mettre en pratique ma vision de
+                                celui-ci.
                                 <br>
                                 A l'écoute de tous, ouvert aux dialogues, tolérance complète.
+                            </p>
                             <blockquote>
                                 "Seul on va plus vite. A plusieurs, on est ralenti"
                                 <footer>Chuck Norris</footer>
                             </blockquote>
-                            </p>
                         </div>
                     </div>
                     <div class="col-12 col-sm-12 col-md-12 col-lg-4 h-100">
@@ -421,20 +420,18 @@
                             style="color: #d0b792" title="QUand je ne lis pas de Documentation" target="_blank"><i
                                 class="fas fa-book fa-3x icon"></i></a>
                         <p><br>Littérature</p>
-                        <p>
                         <blockquote>
                             "Ah, la vie ! Tragédie douce-amère, ô putain mirobolante qui m'a aveuglé et conduit à ma
                             perte !" <br>
                             <cite>Demande à la poussière (1939)</cite>
                             <footer>John Fante</footer>
                         </blockquote>
-                        </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="download-cv-block col-sm-12 col-md-12 text-center mb-5 mt-5">
                         <a class="btn btn-success" target="_blank" href="./assets/img/Cv-WebDeveloppeur.png">Télécharger
-                            CV</a></button>
+                            CV</a>
                     </div>
                 </div>
             </div>
@@ -472,8 +469,8 @@
                             <i class="form-control-icon pe-7s-comment"></i>
                             <div class="help-block with-errors"></div>
                         </div>
-                        <a href="mailto:maxblanck@outlook.fr"><button class="btn btn-success my-4">Envoyer un
-                                mail</button></a>
+                        <a href="mailto:maxblanck@outlook.fr" class="btn btn-success my-4">Envoyer un
+                            mail</a>
                     </div>
                 </div>
             </div>
@@ -483,7 +480,7 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col-6">
-                    <p>&copy Handmade with &hearts; by Max Blanck</p>
+                    <p>&copy; Handmade with &hearts; by Max Blanck</p>
                 </div>
                 <div class="col-6">
                     <p><a href="" class="mention">Mentions légales</a></p>
