--- a/index.html
+++ b/index.html
@@ -119,7 +119,6 @@
                 </div>
             </div>
         </section>
-
         <div class="container-fluid parallaxResume"></div>
         <section id="projects">
             <div class="container-fluid text-center projects-grid">
@@ -331,7 +330,7 @@
                         <ul class="info-list">
                             <li><span class="title">Age : </span><span class="value">31</span></li>
                             <li><span class="title">Residence : </span><span class="value">France</span></li>
-                            <li><span class="title">Address : </span><span class="value">Rue Ancel. 60200
+                            <li><span class="title">Address : </span><span class="value">
                                     Compiègne</span>
                             </li>
                             <li><span class="title">e-mail : </span><a href="mailto:maxblanck@outlook.fr"
