--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                 </div>
                 <div class="row">
                     <div class="download-cv-block col-sm-12 col-md-12 text-center mb-5 mt-5">
-                        <a class="btn btn-success" target="_blank" href="https://raw.githubusercontent.com/MaBlanck/MaBlanck.github.io/master/assets/img/Cv-WebDeveloppeur.png">Télécharger
+                        <a class="btn btn-success" target="_blank" href="https://github.com/MaBlanck/MaBlanck.github.io/raw/master/assets/img/Cv-WebDeveloppeur.png">Télécharger
                             CV</a>
                     </div>
                 </div>
